more dark mode fixes

--- a/frontend/src/routes/_base.sass
+++ b/frontend/src/routes/_base.sass
@@ -42,7 +42,7 @@ $footer-border-color-dark: rgba(0, 0, 0, 0)
 $footer-bg-color-dark: black
 $footer-text-color-dark: rgb(250, 250, 250)
 $code-bg-color-dark: lighten(black, 5%)
-$code-title-color-dark: lighten($code-bg-color-dark, 1%)
+$code-title-color-dark: $accent-color-dark
 $code-border-color-dark: darken($code-bg-color-dark, 10%)
 $video-border-color-dark: darken($accent-color-dark, 5%)
 $kbd-bg-color-dark: #f7f7f7
